# Kart-Public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  developer-powershell-2.ps1  developer-powershell.ps1  launch-powershell.cmd  setup-dev-environment.ps1
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/Modules/: Additional.cmake  FindGME.cmake  FindSDL2.cmake  FindSDL2_main.cmake  FindSDL2_mixer.cmake
deno_dll/: .gitignore  Cargo.toml  README.md  demo.js  deno_dll.h  run.ps1
deno_dll/.cargo/: config
deno_dll/c-test-harness/: c-test-harness.cpp  c-test-harness.sln  c-test-harness.vcxproj  c-test-harness.vcxproj.filters
deno_dll/examples/: main.rs
deno_dll/src/: c_api.rs  core.rs  lib.rs  main.rs  stuff.rs
deno_dll/ts/: demo.ts
src/: CMakeLists.txt  Makefile  d_clisrv.c  d_clisrv.h  d_main.c  d_netcmd.c  d_netcmd.h  d_netfil.c  d_player.h  doomdef.h  doomstat.h  g_game.c  g_game.h  i_system.h  k_kart.c  lua_hooklib.c  m_aatree.c  m_menu.c  m_menu.h  m_perfstats.c  m_perfstats.h  p_local.h  p_mobj.c  p_setup.c  p_spec.c  p_tick.c  p_user.c  r_bsp.c  r_defs.h  r_main.c  r_main.h  r_segs.c  r_things.c  s_sound.c  st_stuff.c  w_wad.c
src/hardware/: hw_defs.h  hw_main.c  hw_main.h
src/hardware/r_opengl/: r_opengl.c
src/sdl/: CMakeLists.txt  Makefile.cfg  i_system.c  i_video.c
src/win32/: Makefile.cfg  win_cd.c
